Again I hate vscode

--- a/Scheduler/EstimateTime/Regression.ipynb
+++ b/Scheduler/EstimateTime/Regression.ipynb
@@ -75,12 +75,13 @@
     "            idx = re.search(file_format_string, file).group(1)\n",
     "            try:\n",
     "                extract_time = file_dict['extract time']\n",
+    "                \n",
     "                file_size = os.path.getsize(file_index_dict[idx])\n",
     "                if extract_time > 0 and file_size > 0:\n",
     "                    datapoints.append((file_size, extract_time))\n",
     "            except KeyError:\n",
     "                empty_files += 1\n",
-    "    \n",
+    "\n",
     "    return datapoints\n"
    ]
   },
@@ -98,7 +99,7 @@
     }
    ],
    "source": [
-    "datapoints = get_times(\"../../../CDIACMetadataExtract/CDIACTabularExtract\", \"TabXtract(.*).json\")\n",
+    "datapoints = get_times(\"../../../CDIACMetadataExtract/CDIACKeywordExtract\", \"KWXtract(.*).json\")\n",
     "print(len(datapoints)) "
    ]
   },
