--- a/Scheduler/Simulator/simulate.ipynb
+++ b/Scheduler/Simulator/simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "source": [
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
@@ -10,20 +10,53 @@
     "from scheduler import Scheduler, file_estimated_cost\n",
     "import pandas as pd\n",
     "import pickle as pkl\n",
-    "import heapq"
+    "import heapq\n",
+    "import json"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "source": [
-    "times = pd.read_csv(\"../times.csv\")\n",
     "with open(\"../queue.pkl\", \"rb\") as fp:\n",
-    "\tqueue =\tpkl.load(fp)"
+    "\tqueue =\tpkl.load(fp)\n",
+    "with open(\"../AggregateExtractionTimes/estimate_times.json\", \"r\") as fp:\n",
+    "\ttimes = json.load(fp)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "count = 0\n",
+    "real = 0\n",
+    "for i in range(len(queue)):\n",
+    "\tfile_item = queue[i]\n",
+    "\tif file_item.best_extractor_index() == 2 or times[file_item.get_filename()][file_item.best_extractor_index()] == 0:\n",
+    "\t\tcount += 1\n",
+    "\telse:\n",
+    "\t\treal += 1\n",
+    "\n",
+    "print(\"None: \", count)\n",
+    "print(\"Real: \", real)"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'file_estimated_cost' object has no attribute 'best_extractor_index'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3170418/954908036.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mfile_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_extractor_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtimes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_filename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_extractor_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                 \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'file_estimated_cost' object has no attribute 'best_extractor_index'"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -31,12 +64,14 @@
    "execution_count": 19,
    "source": [
     "def simulate_single_file_extraction(queue):\n",
-    "\tfile_item = heapq.heappop(queue)\n",
-    "\tprint(os.path.getsize(file_item.get_filename()))\n",
-    "\textract_time = times.loc[times[\"filename\"] == file_item.get_filename(), \"metadata_extract_time\"].iloc[0]\n",
-    "\tprint(times.loc[times[\"filename\"] == file_item.get_filename()])\t\n",
-    "\tprint(type(extract_time))\n",
-    "\tprint(extract_time)"
+    "\tbest_index = 2 # 2 represents unknown\n",
+    "\textraction_time = 0\n",
+    "\twhile best_index == 2 or extraction_time == 0: # nonzero extraction time AND not unknown\n",
+    "\t\tfile_item = heapq.heappop(queue)\n",
+    "\t\tbest_index = file_item.best_extractor_index()\n",
+    "\t\textraction_time = times[file_item.get_filename][file_item.best_extractor_index()]\n",
+    "\t\n",
+    "\t"
    ],
    "outputs": [],
    "metadata": {}
