--- a/Scheduler/Simulator/simulate.ipynb
+++ b/Scheduler/Simulator/simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "source": [
     "import sys, os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
@@ -11,49 +11,76 @@
     "import pandas as pd\n",
     "import pickle as pkl\n",
     "import heapq\n",
-    "import json"
+    "import time\n",
+    "import multiprocessing as mp"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "source": [
     "with open(\"../queue.pkl\", \"rb\") as fp:\n",
     "\tqueue =\tpkl.load(fp)\n",
-    "with open(\"../AggregateExtractionTimes/estimate_times.json\", \"r\") as fp:\n",
-    "\ttimes = json.load(fp)"
+    "ExtractionTimes = pd.read_csv(\"../AggregateExtractionTimes/ExtractionTimes.csv\", index_col=0)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "source": [
     "count = 0\n",
     "real = 0\n",
+    "empty = 0\n",
     "for i in range(len(queue)):\n",
     "\tfile_item = queue[i]\n",
-    "\tif file_item.best_extractor_index() == 2 or times[file_item.get_filename()][file_item.best_extractor_index()] == 0:\n",
+    "\tbest_extractor_index = file_item.best_extractor_index()\n",
+    "\tfilename = file_item.get_filename()\n",
+    "\t\n",
+    "\t'''\n",
+    "\tif filename in ExtractionTimes.index:\n",
+    "\t\tprint(\"It's in here\")\n",
+    "\t'''\n",
+    "\ttry:\n",
+    "\t\tbest_time = ExtractionTimes.loc[filename][best_extractor_index]\n",
+    "\t\tif best_extractor_index == 2:\n",
+    "\t\t\tassert best_time == 5\n",
+    "\texcept IndexError:\n",
+    "\t\tprint(ExtractionTimes[filename])\n",
+    "\t\tprint(best_extractor_index)\n",
+    "\t\tbreak\n",
+    "\n",
+    "\tif os.path.getsize(filename) == 0:\n",
+    "\t\tempty += 1\n",
+    "\n",
+    "\tif best_extractor_index == 2 or best_time == 0:\n",
     "\t\tcount += 1\n",
+    "\t\tif os.path.getsize(filename) == 0:\n",
+    "\t\t\tprint(filename)\n",
     "\telse:\n",
     "\t\treal += 1\n",
-    "\n",
     "print(\"None: \", count)\n",
-    "print(\"Real: \", real)"
+    "print(\"Real: \", real)\n",
+    "print(\"Empty: \", empty)"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'file_estimated_cost' object has no attribute 'best_extractor_index'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3170418/954908036.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mfile_item\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_extractor_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtimes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_filename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfile_item\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_extractor_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                 \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'file_estimated_cost' object has no attribute 'best_extractor_index'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/home/cc/CDIACPub8/Hydrochem_data/.gmtcommands4\n",
+      "/home/cc/CDIACPub8/oceans/David_Starr/README\n",
+      "/home/cc/CDIACPub8/oceans/David_Starr/README~\n",
+      "/home/cc/CDIACPub8/oceans/McArthurII/README\n",
+      "/home/cc/CDIACPub8/oceans/CARINA/S.JohnsonI/README\n",
+      "/home/cc/CDIACPub8/oceans/SOCCOM/096U20160314/Hydrochem_data/.gmtcommands4\n",
+      "/home/cc/CDIACPub8/oceans/ryofumaru10jap/README~\n",
+      "None:  10266\n",
+      "Real:  10103\n",
+      "Empty:  7\n"
      ]
     }
    ],
@@ -61,15 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "source": [
     "def simulate_single_file_extraction(queue):\n",
     "\tbest_index = 2 # 2 represents unknown\n",
     "\textraction_time = 0\n",
-    "\twhile best_index == 2 or extraction_time == 0: # nonzero extraction time AND not unknown\n",
+    "\twhile best_index == 2 or extraction_time == 5: # nonzero extraction time AND not unknown\n",
     "\t\tfile_item = heapq.heappop(queue)\n",
     "\t\tbest_index = file_item.best_extractor_index()\n",
-    "\t\textraction_time = times[file_item.get_filename][file_item.best_extractor_index()]\n",
+    "\t\textraction_time = ExtractionTimes.loc[file_item.get_filename()][file_item.best_extractor_index()]\n",
+    "\ttime.sleep(extraction_time)\n",
     "\t\n",
     "\t"
    ],
@@ -78,26 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "source": [
-    "simulate_single_file_extraction(queue)"
+    "print(mp.cpu_count())"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "14287\n",
-      "      Unnamed: 0                                           filename  \\\n",
-      "1357        1357  /home/cc/CDIACPub8/CdiacBundles/33RO/RB1402_Re...   \n",
-      "\n",
-      "      crawl_time  feature_extract_time  predict_time  heap_insert_time  \\\n",
-      "1357    0.001198                0.0007      0.036568          0.000309   \n",
-      "\n",
-      "      metadata_extract_time  \n",
-      "1357           1.131830e+06  \n",
-      "<class 'numpy.float64'>\n",
-      "1131829.6175782718\n"
+      "48\n"
      ]
     }
    ],
@@ -105,8 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 10,
+   "source": [
+    "processes=[mp.Process(target=simulate_single_file_extraction, args=(queue,)) for x in range(0, mp.cpu_count())]\n",
+    "\n",
+    "for p in processes:\n",
+    "    p.start()\n",
+    "\n",
+    "for p in processes:\n",
+    "    p.join()\n",
+    "\n"
+   ],
    "outputs": [],
    "metadata": {}
   }
