--- a/Scheduler/dequeue_analysis.ipynb
+++ b/Scheduler/dequeue_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "source": [
     "import json\n",
     "from metadata_metrics import readability_score, completeness_score_img, completeness_score_jsonxml, completeness_score_keyword, completeness_score_netcdf, completeness_score_tabular"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "source": [
     "with open(\"dequeue_list.json\", \"r\") as fp:\n",
     "\tdequeue_list = json.load(fp)\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "source": [
     "readability_scores = dict()\n",
     "completeness_scores = dict()\n",
@@ -53,14 +53,75 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3380654/3361891804.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m                 \u001b[0mfilepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/home/cc/CDIACMetadataExtract/CDIACNETCDFExtracted/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'NetCDFXtract'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfile_to_index_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.json'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                 \u001b[0mcompleteness_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompleteness_score_netcdf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mreadability_score\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreadability_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mcount\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "20296\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Readability"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "readibility_list = list(readability_scores.values())\n",
+    "valid = 0\n",
+    "readable = []\n",
+    "for key, value in readability_scores.items():\n",
+    "\tif value != 'no strings':\n",
+    "\t\tvalid += 1\n",
+    "\t\treadable.append(value)\n",
+    "\n",
+    "print(len(readable))\n",
+    "avg_readability = sum(readable) / len(readable)\n",
+    "print(avg_readability)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "63.84529411764701\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "complete = 0\n",
+    "complete_valid = []\n",
+    "\n",
+    "for key, value in completeness_scores.items():\n",
+    "\tcomplete += 1\n",
+    "\n",
+    "\tif complete > 0:\n",
+    "\t\tcomplete_valid.append(value)\n",
+    "\n",
+    "\n",
+    "print(len(complete_valid))\n",
+    "\n",
+    "avg_completeness = sum(complete_valid) / len(complete_valid)\n",
+    "print(avg_readability)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "15392\n",
+      "63.84529411764701\n"
      ]
     }
    ],
