--- a/Scheduler/dequeue_analysis.ipynb
+++ b/Scheduler/dequeue_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import json, os, re\n",
     "from metadata_metrics import readability_score, completeness_score_img, completeness_score_jsonxml, completeness_score_keyword, completeness_score_netcdf, completeness_score_tabular, tfidf_score\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "\n",
     "def get_metadata_metrics(dequeue_list, file_to_index_dict, tfidf_precomputed, threshold):\n",
@@ -36,30 +36,28 @@
     "\tcount = 0\n",
     "\t\n",
     "\tfor file, extractor, cost in dequeue_list:\n",
-    "\n",
     "\t\tif count == threshold:\n",
     "\t\t\tbreak\n",
-    "\n",
     "\n",
     "\t\tparsed_key = file.split(\"/\")\n",
     "\t\tfilename = parsed_key[len(parsed_key) - 1]\n",
     "\t\tif extractor == 'keyword': # keyword\n",
     "\t\t\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACKeywordExtract/' + filename + 'KWXtract' + file_to_index_dict[file] + '.json'\n",
-    "\t\t\tcompleteness_scores[file] = completeness_score_keyword(filepath)\t\t\t\n",
+    "\t\t\tcompleteness_scores[filepath] = completeness_score_keyword(filepath)\t\t\t\n",
     "\t\telif extractor == 'tabular': # tabular\n",
     "\t\t\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACTabularExtracted/' + filename +  'TabXtract' + file_to_index_dict[file] + '.json'\n",
-    "\t\t\tcompleteness_scores[file] = completeness_score_tabular(filepath)\n",
+    "\t\t\tcompleteness_scores[filepath] = completeness_score_tabular(filepath)\n",
     "\t\t#elif value == 3: # unknown\n",
     "\t\t#\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACKeywordExtract/' + key + file_to_index_dict[key] + 'KWXtract.json'\n",
     "\t\telif extractor == 'json/xml': #json/xml\n",
     "\t\t\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACJSONXMLExtracted/' + filename + 'JSONXMLXtract' + file_to_index_dict[file] + '.json'\n",
-    "\t\t\tcompleteness_scores[file] = completeness_score_jsonxml(filepath)\n",
+    "\t\t\tcompleteness_scores[filepath] = completeness_score_jsonxml(filepath)\n",
     "\t\telif extractor == 'netcdf': #netcdf\n",
     "\t\t\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACNETCDFExtracted/' + filename + 'NetCDFXtract' + file_to_index_dict[file] + '.json'\n",
-    "\t\t\tcompleteness_scores[file] = completeness_score_netcdf(filepath)\n",
+    "\t\t\tcompleteness_scores[filepath] = completeness_score_netcdf(filepath)\n",
     "\t\telif extractor == 'image':\n",
     "\t\t\tfilepath = '/home/cc/CDIACMetadataExtract/CDIACImgPredictions/' + filename + 'ImgXtract' + file_to_index_dict[file] + '.json'\n",
-    "\t\t\tcompleteness_scores[file] = completeness_score_img(filepath)\n",
+    "\t\t\tcompleteness_scores[filepath] = completeness_score_img(filepath)\n",
     "\t\telse:\n",
     "\t\t\tprint('Something went wrong: ', extractor)\n",
     "\n",
@@ -67,6 +65,7 @@
     "\t\t\tfile_count[file] += 1\n",
     "\t\telse:\n",
     "\t\t\tfile_count[file] = 1\n",
+    "\n",
     "\t\textractor_count[extractor] += 1\n",
     "\t\treadability_scores[filepath] = readability_score(filepath)\n",
     "\t\tif filepath in tfidf_precomputed:\n",
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "with open(\"EstimateTime/file_to_index.json\", \"r\") as fp:\n",
     "\tfile_to_index_dict = json.load(fp)\n",
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "X = [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]\n",
     "Y_readability = []\n",
@@ -130,14 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "with open('Experiment4/dequeue_list.pkl', 'rb') as fp:\n",
     "\tdequeue_list = pkl.load(fp)\n",
     "\tfor threshold in X:\n",
     "\t\tprint(\"Threshold: \", threshold)\n",
     "\t\tinput_threshold = threshold * len(dequeue_list)\n",
-    "\n",
+    "\t\tinput_threshold = int(input_threshold)\n",
+    "\t\tprint(\"Files Analyzed: \", input_threshold)\n",
     "\t\treadability_scores, completeness_scores, tfidf_scores, cost_scores, extractor_count, file_count = get_metadata_metrics(dequeue_list, file_to_index_dict, tfidf_computed, input_threshold)\n",
     "\n",
     "\t\textractor_counts.append(extractor_count)\n",
@@ -202,20 +202,7 @@
     "\t\tprint(\"Precomputed length: \", len(tfidf_computed))\n",
     "\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Threshold:  0\n",
-      "Readability:  0\n",
-      "Completeness 0\n",
-      "TFIDF 0\n",
-      "Precomputed length:  0\n",
-      "Threshold:  0.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -224,7 +211,7 @@
    "source": [
     "print(len(X))\n",
     "print(len(Y_readability))\n",
-    "print(len(Y_completeness))\n",
+    "print(Y_completeness)\n",
     "print(len(Y_tfidf))\n"
    ],
    "outputs": [],
@@ -234,10 +221,45 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "cum_Y_readability = np.zeros(len(Y_readability))\n",
+    "\n",
+    "summation = 0\n",
+    "for idx, count in enumerate(Y_readability):\n",
+    "\tsummation += count\n",
+    "\tcum_Y_readability[idx] = summation\n",
+    "\n",
+    "print(cum_Y_readability)\n",
+    "\n",
+    "cum_Y_completeness = np.zeros(len(Y_completeness))\n",
+    "\n",
+    "summation = 0\n",
+    "for idx, count in enumerate(Y_completeness):\n",
+    "\tsummation += count\n",
+    "\tcum_Y_completeness[idx] = summation\n",
+    "\n",
+    "print(cum_Y_completeness)\n",
+    "\n",
+    "\n",
+    "cum_Y_tfidf = np.zeros(len(Y_tfidf))\n",
+    "\n",
+    "summation = 0\n",
+    "for idx, count in enumerate(Y_tfidf):\n",
+    "\tsummation += count\n",
+    "\tcum_Y_tfidf[idx] = summation\n",
+    "\n",
+    "print(cum_Y_tfidf)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "X = np.asarray(X)\n",
-    "Y_readability = np.asarray(Y_readability)[0:]\n",
-    "Y_completeness = np.asarray(Y_completeness)[0:]\n",
-    "Y_tfidf = np.asarray(Y_tfidf)[0:]\n",
+    "Y_readability = np.asarray(Y_readability)\n",
+    "Y_completeness = np.asarray(Y_completeness)\n",
+    "Y_tfidf = np.asarray(Y_tfidf)\n",
     "\n",
     "print(len(Y_readability))\n",
     "\n",
@@ -282,9 +304,18 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "average_readability = np.array(average_readability)\n",
-    "average_readability = average_readability / np.max(average_readability)\n",
-    "print(average_readability)"
+    "print(len(average_readability))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "average_readability_norm = np.array(average_readability)\n",
+    "average_readability_norm = average_readability_norm / np.max(average_readability_norm)\n",
+    "print(average_readability_norm)"
    ],
    "outputs": [],
    "metadata": {}
@@ -300,12 +331,17 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "len(completeness_total['0.1'])\n",
+    "len(completeness_total[0.1])\n",
+    "\n",
+    "\n",
     "\n",
     "cum_completeness = np.zeros(len(completeness_total))\n",
     "\n",
+    "\n",
+    "cum_sum = 0\n",
     "for idx, key in enumerate(completeness_total):\n",
-    "\tcum_completeness[idx] = np.sum(np.array(completeness_total[key]))\n",
+    "\tcum_sum += np.sum(np.array(completeness_total[key]))\n",
+    "\tcum_completeness[idx] = cum_sum\n",
     "\n",
     "print(cum_completeness)"
    ],
@@ -313,19 +349,11 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "\n"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "plt.scatter(X, average_readability)\n",
-    "plt.plot(X, average_readability)\n",
+    "plt.scatter(X, average_readability_norm)\n",
+    "plt.plot(X, average_readability_norm)\n",
     "plt.xlabel(\"File Extractor Pairs Processed\")\n",
     "plt.ylabel(\"Average Readability (Normalized)\")\n",
     "plt.title(\"File Extractor Pairs Processed vs Avg Readability\")\n",
