--- a/Scheduler/debug.ipynb
+++ b/Scheduler/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,40 @@
     "\n",
     "for k, v in model_piles.items():\n",
     "\tprint(k, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14014\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"cdiac_data/cdiactabularscores.json\", \"rb\") as f:\n",
+    "\ttab_dict = json.load(f)\n",
+    "\n",
+    "\n",
+    "new_keys = dict()\n",
+    "\n",
+    "for old_k, v in tab_dict.items():\n",
+    "\tnew_k = old_k.split(\"/\")[-1]\n",
+    "\tnew_keys[old_k] = new_k\n",
+    "\n",
+    "tab_dict = dict((new_keys[key], value) for (key, value) in tab_dict.items())\n",
+    "for k, v in tab_dict.items():\n",
+    "\tprint(k)\n",
+    "\tbreak\n",
+    "\n",
+    "\n",
+    "with open('cdiactabularscores2.json', 'w+') as outfile:\n",
+    "    json.dump(tab_dict, outfile)\n"
    ]
   },
   {
